# ComfyUI-PromptPalette-alt

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
web/: index.js
